[pom] Update argline for jdk 17+ and 18+
allowing additional support for system property test to remove using special surefire configuration.